[build-system]
requires = [
  'setuptools >= 60',
  'setuptools-scm >= 8.0',
]
build-backend = 'setuptools.build_meta'


[project]
name = 'tive-platform-warehouse-sensor-sync'
requires-python = '>= 3.8'
dynamic = [
  'version',
]

[project.optional-dependencies]
tests = [
  'pytest ~= 7.0',
  'pytest-cov',
  'pytest-mock',
  'coverage',
  'hypothesis',
]


[tool.setuptools_scm]
# version_file = "src/python_project_helper/_version.py"
